--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.soubu.test.sanyan"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -17,7 +17,11 @@ android {
         }
     }
 }
-
+repositories {
+    flatDir {
+        dirs '../app/libs'
+    }
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:28.0.0'
@@ -25,4 +29,17 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //闪验SDK
+    api(name: 'shanyan_sdk_v2.0.7A', ext: 'aar')
+    //retrofit
+    api 'com.squareup.retrofit2:retrofit:2.3.0'
+    //okhttp
+    api 'com.squareup.okhttp3:okhttp:3.9.1'
+    //Retrofit通过GSON将结果转换为Bean对象
+    api 'com.squareup.retrofit2:converter-gson:2.0.0'
+    api 'com.github.bumptech.glide:glide:3.7.0'
+    //permission
+    api 'com.yanzhenjie:permission:2.0.0-rc2'
+    api 'com.yanzhenjie.alertdialog:alertdialog:1.0.1'
 }
